# practice

./: README.md  css.css  db_wiring.py  main.py  pyproject.toml  uploads.db
add/: .coverage  main.py  test_main.py  turkey_eq.py  uploads.db
