[tool.poetry]
name = "practice"
version = "0.1.0"
description = "fastapi for practice"
authors = ["Egor-Yarygin <egoryarygin2003@mail.ru>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "=>3.10, =<3.11"
fastapi = "^0.97.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
