[tool.poetry]
name = "practice"
version = "0.1.0"
description = ""
authors = ["Egor-Yarygin <egoryarygin2003@mail.ru>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = {extras = ["basemodel"], version = "^0.22.0"}
pydantic = {extras = ["email"], version = "^1.10.9"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
